# minifilter-rust

./: .gitignore  Cargo.toml  README.md
minifilter/: .gitignore  Cargo.toml  build.rs
minifilter-rust/: Cargo.toml
minifilter/src/: lib.rs
