[package]
name = "minifilter"
version = "0.1.0"
edition = "2021"
build = "build.rs"
authors = ["sn99 <siddharthn.099@gmal.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]

[build-dependencies]
winreg = "0.10.1"
failure = "0.1.8"
